Fix gap between boxes

--- a/style.css
+++ b/style.css
@@ -30,13 +30,14 @@ h2{
 .contenedor {
     display: flex;
     justify-content: center;
-    gap: 8rem; 
+    gap: 5%;
     margin-bottom: 70px;
 }
 
 .caja{
     border: 3px solid black;
     width: 100px;
+    min-width: 90px;
     height: 100px;
     border-radius: 5px;
     transition: all .1s;
